--- a/modules/popup/css/popup.css
+++ b/modules/popup/css/popup.css
@@ -19,6 +19,17 @@
   text-align: center;
   transition: opacity 0.5s ease-out;
 }
+#popupContainer .overlay-popup .overlay-popup-image {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 48px;
+  height: 48px;
+  transform: translate(50%, -50%);
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #444;
+}
 #popupContainer .overlay-popup.fade-out {
   opacity: 0;
 }
