--- a/modules/popup/css/popup.less
+++ b/modules/popup/css/popup.less
@@ -20,6 +20,17 @@
     max-width: 20%;
     text-align: center;
     transition: opacity 0.5s ease-out;
+    .overlay-popup-image {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 48px;
+      height: 48px;
+      transform: translate(50%, -50%);
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid #444;
+    }    
   }
 
   .overlay-popup.fade-out {
